--- a/package.json
+++ b/package.json
@@ -50,5 +50,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "auto": "^11.2.0",
+    "postcss": "^8.4.41",
+    "prefixer": "^0.0.3",
+    "tailwindcss": "^3.4.10"
   }
 }
